--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@header-color: #FFFFFF;
+@header-height: 60px;
+@main-gradient: linear-gradient(to bottom right, #E88C42, #B2727D);
+@shadow: 0 0 2px rgba(0,0,0,0.7);
+@font-color: #1F2020;
+@mobile-size: 768px;
+@left-side: 160px;
