--- a/src/styles.less
+++ b/src/styles.less
@@ -6,7 +6,7 @@
 @mobile-size: 768px;
 @left-side: 160px;
 @click-transition: all 0.2s ease-out;
-@margin-left-right: 3px;
+@margin-small: 3px;
 @icon-size: 35px;
 @text-size: 15px;
 @nav-background: #34425A;
