LOYALTY-8: меню и роуты (#3)

--- a/src/styles.less
+++ b/src/styles.less
@@ -5,3 +5,8 @@
 @font-color: #1F2020;
 @mobile-size: 768px;
 @left-side: 160px;
+@click-transition: all 0.2s ease-out;
+@margin-small: 3px;
+@icon-size: 35px;
+@text-size: 15px;
+@nav-background: #34425A;
