--- a/src/app/system/system.component.less
+++ b/src/app/system/system.component.less
@@ -2,9 +2,12 @@
 
 .root {
   background: #F0F4FA;
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
+  height: 100%;
+  min-height: @min-height;
   position: relative;
+  top: @header-height;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* HEADER */
@@ -13,11 +16,10 @@
   background: @header-color;
   width: 100%;
   position: fixed;
-  top: 0px;
+  top: 0;
   box-sizing: border-box;
   box-shadow: @shadow;
   z-index: 1000;
-  box-sizing: border-box;
 
   &__menu {
     position: absolute;
@@ -44,7 +46,7 @@
     cursor: pointer;
 
     &-content {
-      font-family: "Comic Sans MS";
+      font-family: 'Comic Sans MS';
       color: white;
       margin: auto;
       font-size: 28px;
@@ -103,12 +105,13 @@
   /*--------------------------*/
 
   &-text {
-    font-size: @text-size;
+    font-size: @font-small;
     margin: 0 @margin-small;
   }
 
   &-img {
     height: 40px;
+    width: 40px;
     margin: 0 @margin-small;
   }
 
@@ -120,8 +123,8 @@
 /* LEFT-SIDE MENU */
 .left-nav {
   position: absolute;
-  top: @header-height;
-  height: calc(~"100vh - 60px");
+  height: 100%;
+  min-height: @min-height;
   width: @left-side;
   background: @nav-background;
   box-sizing: border-box;
@@ -175,15 +178,17 @@
 
   &__text {
     padding: 0;
-    font-size: @text-size;
+    font-size: @font-small;
     margin: 0;
-    line-height: @text-size;
+    line-height: @font-small;
   }
 }
 
 .content {
-  position: absolute;
-  top: @header-height;
+  position: relative;
+  height: auto;
+  width: calc(~"100vw - @{left-side}");
+  overflow: hidden;
 }
 
 @media (max-width: @mobile-size) {
@@ -203,6 +208,15 @@
 
   .mobile-none {
     display: none;
+  }
+
+  .content {
+    width: 100vw;
+  }
+
+  .left-nav {
+    position: fixed;
+    height: calc(~"100vh - @{header-height}");
   }
 }
 
