--- a/src/app/system/profile-page/profile-page.component.less
+++ b/src/app/system/profile-page/profile-page.component.less
@@ -2,6 +2,10 @@
 
 .profile-root {
   @for-roots();
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 
 .image-cropper {
