--- a/src/app/system/system.component.html
+++ b/src/app/system/system.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="header__right-content">
-      <div class="right-content__item" (click)="onProfileClick()" routerLink="/profile">
+      <div class="right-content__item" routerLink="/profile">
         <p class="right-content__item-text mobile-none">Profile</p>
         <img class="right-content__item-img circle" src="{{profileImage}}" alt="You">
       </div>
