Profile fix less

--- a/src/app/system/profile-page/profile-page.component.less
+++ b/src/app/system/profile-page/profile-page.component.less
@@ -1,53 +1,43 @@
 @import "../../../styles.less";
 
-.profile-root {
+.profile {
   @for-roots();
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-}
 
-.image-cropper {
-  width: 300px;
-  height: 300px;
-  position: relative;
-  border: 2px solid transparent;
-  border-radius: 150px;
-  overflow:hidden;
-  margin-top: @header-height;
-  box-shadow: @shadow;
-}
+  &__image-wrapper {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    border: 2px solid transparent;
+    border-radius: 150px;
+    overflow:hidden;
+    margin-top: @header-height;
+    box-shadow: @shadow;
+  }
 
-.user-image {
-  display: block;
-  margin: 0 auto;
-  height: auto;
-  width: 100%;
-}
+  &__user-name {
+    font-size: @font-big;
+    font-weight: bold;
+    margin-top: 25px;
+    color: #A1A1A1;
+    text-shadow: @text-shadow;
+  }
 
-.user-name {
-  font-size: @font-big;
-  font-weight: bold;
-  margin-top: 25px;
-  color: #A1A1A1;
-  text-shadow: @text-shadow;
-}
+  &__user-position {
+    font-size: @font-mid;
+    font-weight: bold;
+    margin-top: 12.5px;
+    color: #A1A1A1;
+    text-shadow: @text-shadow;
+  }
 
-.user-position {
-  font-size: @font-mid;
-  font-weight: bold;
-  margin-top: 12.5px;
-  color: #A1A1A1;
-  text-shadow: @text-shadow;
-}
-
-
-@media (max-width: @mobile-size) {
-  .image-cropper {
-    height: 160px;
-    width: 160px;
+  &__user-image {
+    display: block;
+    margin: 0 auto;
+    height: auto;
+    width: 100%;
   }
 }
-
-
