--- a/src/app/system/profile-page/profile-page.component.html
+++ b/src/app/system/profile-page/profile-page.component.html
@@ -1,7 +1,7 @@
-<div class="profile-root">
-  <div class="image-cropper">
-    <img class="user-image" src="{{ user.image }}" alt="YourPhoto">
+<div class="profile">
+  <div class="profile__image-wrapper">
+    <img class="profile__user-image" src="{{ user.image }}" alt="YourPhoto">
   </div>
-  <p class="user-name">{{ user.name }}&nbsp;{{ user.surname }}</p>
-  <p class="user-position">{{ user.position }}</p>
+  <p class="profile__user-name">{{ user.name }}&nbsp;{{ user.surname }}</p>
+  <p class="profile__user-position">{{ user.position }}</p>
 </div>
