--- a/src/styles.less
+++ b/src/styles.less
@@ -1,9 +1,11 @@
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+
 @header-color: #FFFFFF;
 @header-height: 60px;
 @main-gradient: linear-gradient(to bottom right, #E88C42, #B2727D);
 @shadow: 0 0 2px rgba(0,0,0,0.7);
 @font-color: #1F2020;
-@mobile-size: 768px;
+@mobile-size: 769px;
 @left-side: 160px;
 @click-transition: all 0.2s ease-out;
 @margin-small: 3px;
@@ -17,8 +19,10 @@
   height: 100%;
   min-height: @min-height;
   margin: 0;
-  padding: 0;
 };
 @font-big: 25px;
 @text-shadow: 0.5px 0.5px grey;
 @font-mid: 20px;
+@padding-mid: 15px;
+@margin-mid: 15px;
+@padding-small: 5px;
