--- a/src/app/system/system.component.html
+++ b/src/app/system/system.component.html
@@ -11,7 +11,7 @@
       <div class="header__logo-content">LoyaltyLab</div>
     </div>
 
-    <div class="header__right-content">
+    <!--<div class="header__right-content">
       <div class="right-content__item" routerLink="/profile">
         <p class="right-content__item-text mobile-none">Profile</p>
         <div class="statistic__image-wrapper">
@@ -22,7 +22,7 @@
         <i class="right-content__item-icon material-icons">exit_to_app</i>
         <p class="right-content__item-text mobile-none">Log&nbsp;out</p>
       </div>
-    </div>
+    </div>-->
   </header>
 
   <!--NAVIGATION-->
