refactoring + login template

--- a/src/app/system/products-page/products-page.component.html
+++ b/src/app/system/products-page/products-page.component.html
@@ -49,6 +49,7 @@
     </mat-expansion-panel>
   </mat-accordion>
   <mat-paginator
+    class="paginator"
   [length]="pageLength"
   [pageSize]="pageSize"
   [pageSizeOptions]="pageSizeOptions"
