--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,3 @@
-@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 @header-color: #FFFFFF;
 @header-height: 60px;
@@ -13,7 +12,7 @@
 @icon-size: 35px;
 @font-small: 15px;
 @nav-background: #34425A;
-@min-height: calc(~"100vh - @{header-height}");
+@min-height: calc(~"100vh - @{header-height} - 30px");
 @for-roots: {
   position: relative;
   background: transparent;
