--- a/src/app/system/shops-page/shops-page.component.html
+++ b/src/app/system/shops-page/shops-page.component.html
@@ -31,6 +31,7 @@
     </mat-expansion-panel>
   </mat-accordion>
   <mat-paginator
+    class="paginator"
     [length]="pageLength"
     [pageSize]="pageSize"
     [pageSizeOptions]="[10, 25, 50]"
