--- a/src/app/system/profile-page/profile-page.component.html
+++ b/src/app/system/profile-page/profile-page.component.html
@@ -2,6 +2,6 @@
   <div class="profile__image-wrapper">
     <img class="profile__user-image" src="{{ user.image }}" alt="YourPhoto">
   </div>
-  <p class="profile__user-name">{{ user.name }}&nbsp;{{ user.surname }}</p>
+  <p class="profile__user-name">{{ user.name }}&nbsp;</p>
   <p class="profile__user-position">{{ user.position }}</p>
 </div>
