--- a/src/app/auth/auth.style.less
+++ b/src/app/auth/auth.style.less
@@ -5,18 +5,20 @@
   display: flex;
   height: 100vh;
   width: 100vw;
-  background-color: #647382;
+  background: url('https://static1.squarespace.com/static/5890bc34d1758e5ffeebfa38/t/58ac49366a4963358680d0d1/1487686559043/518079-background-hd.jpg?format=2500w') no-repeat;
 }
 
 .auth-form {
   position: relative;
   display: block;
-  height: 50%;
+  padding-bottom: @padding-mid;
+  height: auto;
+  min-height: 50%;
   width: 70%;
   max-width: 500px;
   background-color: @header-color;
   margin: auto;
-  shadow: @shadow;
+  box-shadow: @shadow;
   justify-self: center;
 
   &_header {
@@ -29,6 +31,7 @@
     box-sizing: border-box;
 
     &-content {
+      box-sizing: border-box;
       font-family: 'Comic Sans MS';
       color: white;
       margin: auto;
