--- a/src/app/auth/login/login.template.html
+++ b/src/app/auth/login/login.template.html
@@ -1,16 +1,49 @@
 <div class="login-root">
 
-  <form class="login-form">
-    <mat-form-field appearance="fill" class="login-form_item">
-      <input matInput placeholder="Email" [formControl]="emailFormControl"
-             [errorStateMatcher]="matcher">
+  <div class="signup-header">
+    <p>Do not have account yet?</p>
+    <button mat-button
+            (click)="onSignedUp()"
+            color="warn">Sign up!</button>
+  </div>
+
+  <form class="login-form"
+        (ngSubmit)="onSignedIn()"
+        [formGroup]="form">
+    <mat-form-field class="login-form_item">
+      <input matInput placeholder="Email" formControlName="email">
+      <mat-icon matSuffix>email</mat-icon>
       <mat-hint>Please enter a email address</mat-hint>
-      <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+      <mat-error
+        *ngIf="form.controls.email.errors?.email && !form.controls.email.errors?.required">
         Please enter a valid email address
       </mat-error>
-      <mat-error *ngIf="emailFormControl.hasError('required')">
+      <mat-error *ngIf="form.controls.email.errors?.required">
         Email is <strong>required</strong>
       </mat-error>
     </mat-form-field>
+
+    <mat-form-field class="login-form_item">
+      <input matInput autocomplete="off" placeholder="Password" formControlName="password" [type]="hide ? 'text': 'password'">
+      <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+      <mat-hint>Please enter a password</mat-hint>
+      <mat-error *ngIf="form.controls.password.errors?.required">
+        Password is <strong>required</strong>
+      </mat-error>
+    </mat-form-field>
+
+    <div class="login-form_item">
+      <div class="login-form_item-submit">
+        <button mat-raised-button
+                type="submit"
+                color="warn"
+                [disabled]="form.invalid">Sign in</button>
+      </div>
+    </div>
+
+    <div class="login-form_item-error">
+      <mat-error *ngIf="isErrorVisible">Wrong email or password</mat-error>
+    </div>
+
   </form>
 </div>
