--- a/src/app/system/profile-page/profile-page.component.less
+++ b/src/app/system/profile-page/profile-page.component.less
@@ -4,6 +4,7 @@
   @for-roots();
   display: flex;
   align-items: center;
+  min-height: calc(~"100vh - @{header-height}");
   justify-content: flex-start;
   flex-direction: column;
 
