--- a/src/app/auth/auth.style.less
+++ b/src/app/auth/auth.style.less
@@ -6,6 +6,10 @@
   height: 100vh;
   width: 100vw;
   background: url('https://static1.squarespace.com/static/5890bc34d1758e5ffeebfa38/t/58ac49366a4963358680d0d1/1487686559043/518079-background-hd.jpg?format=2500w') no-repeat;
+  background-size: 100%;
+  -moz-background-size: 100%; /* Firefox 3.6+ */
+  -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+  -o-background-size: 100%; /* Opera 9.6+ */
 }
 
 .auth-form {
@@ -13,7 +17,7 @@
   display: block;
   padding-bottom: @padding-mid;
   height: auto;
-  min-height: 50%;
+  min-height: 300px;
   width: 70%;
   max-width: 500px;
   background-color: @header-color;
@@ -31,6 +35,7 @@
     box-sizing: border-box;
 
     &-content {
+      position: relative;
       box-sizing: border-box;
       font-family: 'Comic Sans MS';
       color: white;
