--- a/src/app/auth/login/login.style.less
+++ b/src/app/auth/login/login.style.less
@@ -5,7 +5,6 @@
   display: flex;
   height: 100%;
   width: 100%;
-  align-items: center;
   flex-direction: column;
   justify-content: space-around;
 }
@@ -14,9 +13,9 @@
   position: relative;
   display: flex;
   align-items: center;
+  align-self: center;
   flex-direction: column;
   justify-content: space-around;
-  transform: translateY(30px);
   width: 70%;
 
   &_item {
@@ -36,7 +35,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  align-self: center;
   align-items: center;
   top: @margin-mid;
   font-size: @font-small;
